--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.0.2",
+    "@types/react-native": "^0.72.2",
     "expo": "~49.0.11",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
