--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "expo-web-browser": "~12.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.4",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native": "0.72.5",
+    "react-native-gesture-handler": "^2.13.1",
+    "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-ui-lib": "^7.8.0",
     "react-native-web": "~0.19.6",
     "styled-components": "5"
   },
