--- a/app.json
+++ b/app.json
@@ -34,6 +34,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "12ffd88e-de67-43c7-aa8d-62460070a2f8"
+      }
+    },
+    "owner": "xandinhou"
   }
 }
