--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/native": "^6.0.2",
     "@types/react-native": "^0.72.2",
+    "axios": "^1.6.2",
     "expo": "~49.0.11",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
