--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-ui-lib": "^7.8.0",
     "react-native-web": "~0.19.6",
-    "styled-components": "5"
+    "styled-components": "5",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
